Classi di test per Personale, Carrello, SD e Connessione
Co-Authored-By: MarcoValceschini <127782153+MarcoValceschini@users.noreply.github.com>