@@ -2,14 +2,26 @@ package unibite;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+import java.math.BigDecimal;
+import java.math.RoundingMode;
+import java.util.ArrayList;
+import java.util.List;
+
 import org.jetbrains.annotations.NotNull;
 import org.jooq.DSLContext;
 import org.jooq.Record1;
 import org.jooq.Result;
 import org.junit.jupiter.api.Test;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
+import java.util.Map;
+import java.util.Set;
+import java.util.Map.Entry;
 
 import controller.Carrello;
 import controller.Piatto;
+import controller.TipoPortata;
 import generated.tables.Piatti;
 import model.Connessione;
 
@@ -27,41 +39,53 @@ class CarrelloTest {
 	
 	//Test che verifica che la creazione del carrello crei una lista vuota
 	@Test public void testgetLista() {
-		assertNull(c.getLista());
-		assertEquals(0, c.elaboraPrezzo());
+		assertTrue(c.getLista().isEmpty());
+	}
+	
+	//verifica che il prezzo iniziale del carrello sia zero
+	@Test public void testPrezzoIniziale() {
+		assertEquals(BigDecimal.ZERO, c.elaboraPrezzo());
 	}
 	
 	//Test che verifica che si possa aggiungere un piatto correttamente al carrello
-	@Test public void testAggiiungiPiatto() {
-		Piatto p=new Piatto("Piatto1", null, null, null, null, 0, null, 0);
-		c.aggiungiPiatto(p.getNome());
-		assertEquals("Piatto1", c.getLista().getFirst().getKey());
+	@Test public void testAggiungiPiatto() {
+		//aggiunge piatto al carrello
+		//assertTrue(c.getLista().isEmpty());
+		c.aggiungiPiatto("Braciola di maiale");
+		assertEquals("Braciola di maiale", c.getLista().get(0).getKey());
 	}
 	
 	//Test che verifica che si possa aggiungere un primo piatto con formaggio correttamente al carrello
-		@Test public void testAggiiungiPiattoFormaggio() {
-			Piatto p=new Piatto("Piatto1", null, null, null, null, 0, null, 0);
-			c.aggiungiPiattoConFormaggio(p.getNome());
-			assertEquals("Piatto1", c.getLista().getFirst().getKey());
-			assertEquals("Aggiungi Formaggio", c.getLista().getFirst().getValue());  //?
+		@Test public void testAggiungiPiattoFormaggio() {
+			c.aggiungiPiattoConFormaggio("Pasta al ragù");
+			assertEquals("Pasta al ragù", c.getLista().getFirst().getKey());
+			assertEquals("Aggiungi Formaggio", c.getLista().getFirst().getValue());
 		}
 		
-	//Test che verifica che la cncellazione di un elemento dal carrello lo rimuova effettivamente dal carrello
-	@Test public void testeliminaPiatto() {
+	  
+	//Test che verifica che l'aggiunta di un piatto al carrello diminuisca le porzioni nel database
+	@Test public void testdiminuisciPiatto() {
 		Connessione connessione = Connessione.getInstance();
 		DSLContext dslContext = connessione.getDslContext();
-        c.aggiungiPiatto("Braciola di maiale");
-		assertNotNull(c.getLista());
-		@NotNull Result<Record1<Integer>> nIniz = dslContext.select(Piatti.PIATTI.NUMEROPORZIONI)
+		Result<Record1<Integer>> nIniz = dslContext.select(Piatti.PIATTI.NUMEROPORZIONI)
 				.from(Piatti.PIATTI).where(Piatti.PIATTI.NOME.eq("Braciola di maiale")).fetch();
-		//elimina piatto appena inserito dal carrello
-		//conta nuovo num elementi in db
-		//verifica che è aumentatoo di 1
+		int inizio=nIniz.getFirst().value1();
+        c.aggiungiPiatto("Braciola di maiale");
+		assertFalse(c.getLista().isEmpty());
+		@NotNull Result<Record1<Integer>> nFin = dslContext.select(Piatti.PIATTI.NUMEROPORZIONI)
+				.from(Piatti.PIATTI).where(Piatti.PIATTI.NOME.eq("Braciola di maiale")).fetch();
+		int fine=nFin.getFirst().value1();
+		assertEquals(1, inizio-fine);
 	}
 	
-	@Test
-	void test() {
-		fail("Not yet implemented");
+	@Test public void testPrezzoCorretto() {
+		c.aggiungiPiatto("Pasta al ragù");
+		c.aggiungiPiatto("Braciola di maiale");
+		c.aggiungiPiatto("Broccoli");
+		BigDecimal bigDecimal = new BigDecimal(4.97);
+		assertEquals(bigDecimal.setScale(2, RoundingMode.HALF_UP),c.elaboraPrezzo().setScale(2, RoundingMode.HALF_UP));
 	}
+	
+	
 
 }
